Implementing login with auth0 and storing tokens in local storage

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_AUTH0_DOMAIN = "vpr-consulting-react.auth0.com"
 
 REACT_APP_AUTH0_CLIENT_ID = VTgJ82R3XRE4x5Vy6vqVWxgEnHXmbDLQ
 
-REACT_APP_AUTH0_CALLBACK_URL = http://localhost:3000/callback
+REACT_APP_AUTH0_CALLBACK_URL = http://localhost:3000/callbackauth
