Implemented profile display and set up Express for public Api

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ REACT_APP_AUTH0_DOMAIN = "vpr-consulting-react.auth0.com"
 REACT_APP_AUTH0_CLIENT_ID = VTgJ82R3XRE4x5Vy6vqVWxgEnHXmbDLQ
 
 REACT_APP_AUTH0_CALLBACK_URL = http://localhost:3000/callbackauth
+
+#Identifier for API we are going to create
+
+REACT_APP_AUTH0_AUDIENCE = http://localhost:3001
+
+REACT_APP_API_URL = https://localhost:3001
