Added an API which requires authentication

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ REACT_APP_AUTH0_CALLBACK_URL = http://localhost:3000/callbackauth
 
 REACT_APP_AUTH0_AUDIENCE = http://localhost:3001
 
-REACT_APP_API_URL = https://localhost:3001
+REACT_APP_API_URL = http://localhost:3001
